cabal-version:        2.2
name:                 req-machines
version:              0.1.0.0
synopsis:             Machines helpers for the req HTTP client library.
-- description:
homepage:             https://github.com/bens/req-machines
license:              BSD-3-Clause
license-file:         LICENSE
author:               Ben Sinclair
maintainer:           ben.d.sinclair@gmail.com
-- copyright:
category:             Network, Web, Conduit
build-type:           Simple
extra-source-files:   CHANGELOG.md, README.md

common depends
  build-depends:      base        >= 4.11   && < 5
                    , bytestring  >= 0.10.8 && < 0.11
                    , http-client >= 0.5.9  && < 0.6
                    , machines    >= 0.6.3  && < 0.7
                    , req         >= 0.3.0  && < 1.3
  default-language:   Haskell2010

library
  import: depends
  hs-source-dirs:     src
  exposed-modules:    Network.HTTP.Req.Machine

test-suite test
  import: depends
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      Network.HTTP.Req.Machine.Test
  build-depends:      req-machines
                    , async
                    , data-default-class
                    , http-types
                    , network
                    , streaming-commons
                    , tasty
                    , tasty-hunit
                    , transformers
                    , transformers-either
                    , wai
                    , warp
